--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -131,7 +131,7 @@
   PB_PRS_The_Reich_In_A_New_Age_tt:0 "\nDemands will be sent for control over the following states to be transferred to Prussia assuming you don't control them: §YSchleswig-Holestein§!, §YHamburg§!, §YHannover§!, §YThuringen§!, §YOberschlesien§!, and §YKatowice§!. Should these demands be accepted you will immediately gain control of these states and core them."
   PB_PRS_Appeal_To_The_German_Diaspora_tt:0 "\nThe above on-map decisions grant §G+2§! building slots in their respective state and §G+2.5%§! stability when completed."
   PB_PRS_Demand_Authority_Over_Berlin_tt:0 "\nWhen the §HBerlin Administration§! is annexed, you will gain the following temporary debuff for §Y200§! days:\n\n"
-  PB_PRS_The_Last_Of_The_Nobility_tt:0 "\nIt is recommended you §YPrioritize§! completing this focus branch."
+  PB_PRS_The_Last_Of_The_Nobility_tt:0 "\nIt is recommended you §YPrioritize§! completing this focus branch if you wish to avoid the Junker coup."
   PB_PRS_David_And_Goliath_tt:0 "Unlocks a unqiue Conscription law:\n"
   PB_PRS_Annihilation_Of_The_Self_tt:0 "Unlocks an improved version of the §HLast Stand§! ability"
   NOR_Arms_Shipment:0 "Since [NOR.GetFlag] §YNorway§! is not at war with us and still exists you will gain the following:\n"
@@ -142,6 +142,10 @@
   PRS_Leave_Russian_Sphere_tt:0 "Prussia leaves the [RUS.GetFlag] Russian §HSphere of Influence§!"
   PRS_Join_French_Sphere_tt:0 "Prussia joins the [FRA.GetFlag] French §HSphere of Influence§!"
   PRS_Has_Claimed_or_Annexed_Land:0 "Prussia has resolved the Berlin issue with Russia"
+  PRS_Dealt_With_The_Junker_Threat:0 "Has dealt with the §YJunker§! threat"
+  PRS_The_Last_King_Of_Prussia_dealt_with:0 "\nThis will unlock focuses that required the §YJunker§! threat to have been dealt with."
+  PRS_Junker_Threat:0 "\nCertain focuses and sub-trees will be locked off until the §YJunker§! threat has been dealt with."
+  PB_PRS_Imprison_Radical_Agitators_tt:0 "\nThe decisions are handled via the §Yon-map§! screen as long as you have selected the decision tab."
 
   ##########################
   # MECHANICS
@@ -252,6 +256,8 @@
   PRS_Political_Maneuvers_In_Posen_desc:0 "By extracting concessions by certain amicable office holders we might be able to secure the state from certain, unwanted elements."
   PRS_Political_Maneuvers_In_Memel:0 "Political Maneuvers In Memel"
   PRS_Political_Maneuvers_In_Memel_desc:0 "By extracting concessions by certain amicable office holders we might be able to secure the state from certain, unwanted elements."
+  PRS_Vaterlandfront_resistance:0 "Vaterlandsfront Resistance"
+  PRS_Vaterlandfront_resistance_desc:0 "Despite our succesful political takeover of the country there are those who still wish to subscribe to Bouhler's radical ideology."
 
   PB_PRS_International:0 "The International"
   PB_PRS_International_desc:0 "\n\n\n\n\n\nThe §HInternational§! has been the brainchild of Philipp Bouhler since his coming to power. The International was designed as a front against what Bouhler refers to as the "§RJudeo Liberal World Order§!". While the organisation is still in its early years the International, for all intents and purposes, is to be kept hidden by all governmental and non-governmental bodies. Effectively the International is a §gtightly monitored global council§! known only by a few minds across the globe. The International operates in the shadows and can be best defined as a shadow government operating primarily in Prussia. The purpose of the International is first; the §Reradication of all leftist thought and influence§!, and second; the establishment of a §L‘Universal Empire’§!. The second goal of the International is an even greater well-kept secret than the organisation itself and has yet to be revealed to the remainder of the council by Bouhler. The Universal Empire is an imagined, empire, that will in the words of Bouhler “§gUnite the disparate tribes of the globe under one single universal banner, with one single purpose, under a single people.§!” This fact is to remain indefinitely secret until Bouhler decides the time is right, should the reality of the International be somehow compromised then this very organisation will likely cease to function.\n\nIf we are to achieve the ambitions of the International then we must spread the influence of the council across the globe, invest in certain continents through the respective decisions below and should the presence of the council reach a certain threshold new opportunities may prevent themselves.\n\n\n                                              \n\n\n\n\nClick on each individual council member to access decisions based on the continent under their jurisdiction.\n"
@@ -455,53 +461,29 @@
   ##########################
 
   PRS_Martin_Bormann:0 "Martin Bormann"  
-  
   PRS_Herbet_Backe:0 "Herbet Backe"
-  
   PRS_Victor_Brack:0 "Victor Brack"
-  
   PRS_Robert_Ley:0 "Robert Ley"
-  
   PRS_Walter_Buch:0 "Walter Buch"
-  
   PRS_August_Schmidtt:0 "August Schmidtt"
-  
   PRS_Joseph_Berchtold:0 "Joseph Berchtold"
-  
   PRS_Gottlob_Berger:0 "Gottlob Berger"
-  
   PRS_Maximilian_Wenger:0 "Maximilian Wenger"
-  
   Gerd_von_Rundstedt:0 "Gerd Von Rundstedt"
-  
   PRS_Hjalmar_Schacht:0 "Hjalmar Schacht"
-   
   PRS_PB_Philipp_Bouhler:0 "Philipp Bouhler"
-  
   PRS_PB_Hasso_von_Manteuffel:0 "Hasso Von Manteuffel"
-  
   PRS_PB_Franz_Halder:0 "Franz Halder"
-  
   PRS_PB_August_Schmidt:0 "August Schmidt"
-  
   PB_PRS_BOF:0 "Bofors"
-
   PRS_Albert_Speer:0 "Albert Speer"
-  
   PRS_Kurt_Schmitt:0 "Kurt Schmitt"
-  
   PRS_Arthur_Seyss:0 "Arthur Seyss"
-  
   PRS_Joachim_Von_Ribbentrop:0 "Joachim Von Ribbentrop"
-
   PRS_Helmuth_James_Von_Moltke:0 "Helmuth James von Moltke"
-
   PRS_Henning_von_Tresckow:0 "Henning von Tresckow"
-
   PRS_Henning_von_Tresckow_2:0 "Henning von Tresckow"
-
   PRS_PB_Elard_von_Oldenburg_Januschau:0 "Elard von Oldenburg-Januschau"
-
   PRS_Kurt_von_Schleicher:0 "Kurt von Schleicher"
 
   ##########################
@@ -967,6 +949,9 @@
   Prussian_Anarcho.7.t:0 "History's Greatest Tyrant"
   Prussian_Anarcho.7.d:0 "" 
   Prussian_Anarcho.7.a:0 "Never again."
+  Prussian_Anarcho.8.t:0 "Vaterlandsfront Terror Attack"
+  Prussian_Anarcho.8.d:0 "" 
+  Prussian_Anarcho.8.a:0 "Hunt these radicalized fools down."
 
   ##########################
   # COSMETIC TAGS
