Angloi and South wont happen at the same time fix

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -2021,9 +2021,21 @@ Unicom_Independent.3.b:0 "Rupprecht, Crown Prince of Bavaria"
 Unicom_Independent.3.c:0 "Haakon, the Danish Option"
 Unicom_Independent.3.e:0 "King Norton III"
 
-Unicom_Independent.4.t:0 "The Governor General Defects"
+Unicom_Independent.4.t:0 "The Governor General Edward Defects"
 Unicom_Independent.4.d:0 "The tension between the United Commonwealth and the United Kingdom reached a boiling point as war broke out between the two nations. In a surprising turn of events, the Governor-General of the United Commonwealth, Prince Edward, made the decision to defect to the Commonwealth.\n\nThe news sent shockwaves throughout both nations, with many questioning Prince Edward's motives and allegiance. The United Kingdom has been left reeling as they tried to come to terms with the defection of one of their own.\n\nRegardless of the opinions, Prince Edward has remained firm in his decision to defect and join the United Commonwealth. He has begun began working with Commonwealth officials to aid in the war effort against the United Kingdom."
 Unicom_Independent.4.a:0 "War makes strange bedfellows."
+
+Unicom_Independent.5.t:0 "The Governor General Edward Flees"
+Unicom_Independent.5.d:0 "The tension between the United Commonwealth and the United Kingdom reached a boiling point as war broke out between the two nations. Not surprisingly the Governor-General of the United Commonwealth, Prince Edward, made the decision to flee back to Britain.\n\nThe news confirmed the people assesment of Edwards loyalty, with many ridiculing Prince Edward's character even further.\n\nRegardless of the opinions, Prince Edward has remained firm in his decision to stay loyal and fight the United Commonwealth. He has begun began working with British officials to end the American Rebellion."
+Unicom_Independent.5.a:0 "The Dog Runs."
+
+Unicom_Independent.6.t:0 "The Governor General George Flees"
+Unicom_Independent.6.d:0 "The tension between the United Commonwealth and the United Kingdom reached a boiling point as war broke out between the two nations. INot surprisingly the Governor-General of the United Commonwealth, Prince George, made the decision to flee back to Britain.\n\nDespite trying to improve the relations with the American People and trying to stop the conflict George realized that war is inevitable and decided to return to his family.\n\nRegardless of the opinions, Prince George has remained firm in his decision to stay loyal and fight the United Commonwealth. He has begun began working with British officials to end the American Rebellion."
+Unicom_Independent.6.a:0 "Go back to your family."
+
+Unicom_Independent.7.t:0 "The Governor General Arthur Defects"
+Unicom_Independent.7.d:0 "The tension between the United Commonwealth and the United Kingdom reached a boiling point as war broke out between the two nations. In a surprising turn of events, the Governor-General of the United Commonwealth, Prince Arthur, made the decision to defect to the Commonwealth.\n\nThe news sent shockwaves throughout both nations, with many questioning Prince Arthurs motives and allegiance. Arthur in his time as Governor-General has become supportive of the American cause and wishes to aid his old American comrades in battle once more. The United Kingdom has been left reeling as they tried to come to terms with the defection of one of their own.\n\nRegardless of the opinions, Prince Edward has remained firm in his decision to defect and join the United Commonwealth. He has begun began working with Commonwealth officials to aid in the war effort against the United Kingdom."
+Unicom_Independent.7.a:0 "A true American."
 
 Unicom_Research.1.t:0 "Successful Genetic Sampling"
 Unicom_Research.1.d:0 "The Tuskegee Research program is conducting a secret operation to collect genetic samples for testing without the knowledge or consent of the public. They have been quietly collecting samples from various individuals in different parts of the country and analyzing them in their laboratories. The program's leaders believe that this research will be critical for developing new medical treatments and improving overall public health.\n\nThe most recent sampling was a success, leading to a large amount of useful genetic material to be used in the cloning program."
