--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -370,12 +370,16 @@
 
   PB_Imp_90_Tension_Limit:0 "Imperial Tension is over §R90%§!"
   PB_Imp_75_Tension_Limit:0 "Imperial Tension is over §R75%§!"
+  PB_Imp_70_Tension_Limit:0 "Imperial Tension is over §R70%§!"
   PB_Imp_50_Tension_Limit:0 "Imperial Tension is over §R50%§!"
+  PB_Imp_40_Tension_Limit:0 "Imperial Tension is over §R40%§!"
 
 
   PB_Imp_90_Tension_Limit_Under:0 "Imperial Tension is under §Y90%§!"
   PB_Imp_75_Tension_Limit_Under:0 "Imperial Tension is under §G75%§!"
+  PB_Imp_70_Tension_Limit_Under:0 "Imperial Tension is under §G70%§!"
   PB_Imp_50_Tension_Limit_Under:0 "Imperial Tension is under §G50%§!"
+  PB_Imp_40_Tension_Limit_Under:0 "Imperial Tension is under §G40%§!"
 
 
   PB_Imp_20_Tension_Limit:0 "Imperial Tension is over §Y20%§!"
@@ -421,7 +425,7 @@
   PM_Secret_Armament:0 "Secret Armament Build-Up"
   PM_Secret_Armament_desc:0 "The British are likely doing the same thing. Better be prepared."
   PM_War_Plan_Birch:0 "War Plan BAZAAR"
-  PM_War_Plan_Birch_desc:0 "Having an espace plan is better then no escape plan"
+  PM_War_Plan_Birch_desc:0 "Having an espace plan is better then having no escape plan"
   PM_Anti_British_Sentiment:0 "Stir Anti-British Sentiments"
   PM_Anti_British_Sentiment_desc:0 "Lets throw some more tea into the harbor!"
   PM_Sabotage_English_Port_Facilities:0 "Sabotage English Ports"
