--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1,6 +1,11 @@
 ﻿l_english:
 
-  
+  ##########################
+  #OPINION MODIFIERS
+  ##########################
+
+  RUS_Sib_Pipeline:0 "Siberian-Alaskan Pipeline"
+
   ##########################
   #BODY AUG MECHANIC
   ##########################
@@ -1071,7 +1076,7 @@
 
   PB_RUS_Siberian_Flag_Deadline_Reached_tt:0 "The §YSiberian Plan§! has §rnot§! reached its' anticipated deadline.\n\n"
   PB_RUS_Siberian_Flag_Deadline_Completed_tt:0 "The §YSiberian Plan§! §Ghas§! reached its' anticipated deadline.\n\n"
-  PB_RUS_Import_Manchu_tt:0 "Unlocks Decision to §Yimport§! Manchurians seeking work to reduce the load on our workers.\n\n"
+  PB_RUS_Import_Manchu_tt:0 "Unlocks Decision to §Yimport§! Manchurians seeking work to reduce the load on our workers.\n\nStates bordering Manchuria will gain one §YArms Factory§!.\n\n"
   PB_RUS_Ease_Oyrot_Industrialization_tt:0 "Upon completion of the §YSiberian Plan§!, the §YAltaic, Buryat, Khakas and Tuvan§! cultures will become §Gaccepted.§!"
   PB_RUS_Promote_Oyrot_Industrialization_tt:0 "As the §YCentral Industrial Program§! advances, states of §YAltaic§! or §YBuryat§! culture will recieve §Gadditional§! factories."
   PB_Form_the_Kuzzbass_Mining_Concern_tt:0 "If completed before the §YKuznetsk Basin Industrialization§! is finished, the §YKuzzbass§! state will receive additional resources."
@@ -1286,6 +1291,12 @@
 
   PB_RUS_Rasputin_Influence_Growth_tt:0 "§RInccrease§! the popularity of the §YRasputinite Cult§! by §Y5%§!.\n"
   PB_RUS_Assassinate_Rasputin_tt:0 "Begin §2Operatsiya Polunoch§!\n"
+
+  PB_RUS_Spacing_tt:0 " \n"
+  PB_RUS_Kiev_Max_Infra:0 "Add §Ymaximum§! infrastructure to §YKiev§!"
+  RUS_trade_tt:0 "§YTrade Relations§! between Russia-Alaska and the following North American nations will increase by §G+25§!"
+  PB_RUS_Sib_Infra_tt:0 "Sets the minimum level of §Yinfrastructure§! for states to §Y2§! and adds an additional building slot to these states\n\n"
+  RUS_Brunhild:0 "Brunhild"
 
   #######################
   # PARTIES
