Russia part 2 electric boogaloo

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+  
   ##########################
   #OPINION MODIFIERS
   ##########################
@@ -214,6 +214,9 @@
   PB_RUS_Icon_Eleusa:0 "Blessing of the §gVIRGIN MOTHER§!"
   PB_RUS_Icon_Climacus:0 "Blessing of the §OLADDER§!"
   PB_RUS_Icon_Michael:0 "Blessing of the §RARCHANGEL§!"
+
+  PB_RUS_Class_And_Nation_Idea:0 "Class And Nation"
+  PB_Govidea_Russian_State_Capitalism:0 "Russian State Capitalism"
 
   ##########################
   # EVENTS
@@ -526,6 +529,10 @@
   Russian_Flavour.7.t:0 "Snap, Crackle, Pop"
   Russian_Flavour.7.d:0 "*Pipebursting sound effects* "Oh no!!!""
   Russian_Flavour.7.a:0 "Well, shit."
+
+  Russian_Flavour.8.t:0 "Order Restored"
+  Russian_Flavour.8.d:0 ""
+  Russian_Flavour.8.a:0 "noice"
 
   Russia_Rasputin.1.t:0 "Whispers Across Siberia"
   Russia_Rasputin.1.d:0 "Usually, Siberia is not a problem for the government in Saint Petersburg. However, in recent months, we have been receiving concerning reports about a secret cult gaining strength. This cult appears to revolve around an individual named "Rasputin", a mad monk who believes himself to be the Messiah. Usually, cults like this would be ignored, especially if they were in such a vast, empty place like Siberia, where they prove no threat to our control.\n\nHowever, the Rasputinite cult is starting to become a major problem and a headache for the authorities in Siberia, as Rasputin's charisma continues to draw in more and more people every day. The Okhrana believe that the cult has already infiltrated the local government there, and the continued trickle of information from Siberia paints an ominous picture for us.\n\nSomething must be done about Rasputin and his cult..."
@@ -1297,7 +1304,12 @@
   RUS_trade_tt:0 "§YTrade Relations§! between Russia-Alaska and the following North American nations will increase by §G+25§!"
   PB_RUS_Sib_Infra_tt:0 "Sets the minimum level of §Yinfrastructure§! for states to §Y2§! and adds an additional building slot to these states\n\n"
   RUS_Brunhild:0 "Brunhild"
-
+  PB_RUS_Industrial_Stasis_tt:0 "Every core state that has less than two §YCivilian Factories§! will suffer from the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! state modifier.\n\n"
+  PB_RUS_Industrial_Stasis_2_tt:0 "\nTo remove the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! modifier have two §YCivilian Factories§! in the affected state."
+  PB_RUS_Imperial_Corp_tt:0 "Trade relations between us and our sphere members increases by §G+25§!\n\n"
+  PB_RUS_National_Protectionism_tt:0 "Sphere members will gain §G+1§! off-map civilian and military factory\n\n"
+  PB_RUS_Workshop_of_the_East_tt:0 "Alliance members will gain §G+1§! off-map civilian and military factory\n\n"
+  
   #######################
   # PARTIES
   #######################
@@ -1305,6 +1317,8 @@
   #######################
   # DYNAMIC MODIFIERS
   #######################
+  RUS_Industrial_Stasis:0 "Industrial Stasis"
+  RUS_Industrial_Stasis_desc:0 "§YTo remove this modifier have two §YCivilian Factories in this state.§!"
 
   #######################
   # COSMETIC TAGS
