--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1,5 +1,13 @@
 ﻿l_english:
   
+
+  ##########################
+  #TECH TEAMS
+  ##########################
+  PB_RUS_Imperial_Tula_Arms_Plant:0 "Tula Arms Plant"
+  PB_RUS_Degtyaryov_Plant:0 "Degtyaryov Plant"
+
+
   ##########################
   #OPINION MODIFIERS
   ##########################
@@ -176,7 +184,7 @@
   PB_RUS_Expand_Power_Projection:0 "Expanded Power Projection"
   PB_Euro_Reconstruction_Program:0 "European Reconstruction Initiative"
 
-  PB_RUS_Middle_Class_Rising_But_Better:0 "Rise of the Russian Middle Class"
+  PB_RUS_Middle_Class_Rising_But_Better:0 "The Russian Middle Class"
   PB_RUS_Middle_Class_Rising_But_Better_desc:0 "One of the biggest demograghic shifts of the Second Renaissance was the birth of the Russian middle class. For most of its' history, Russia was a country of haves and have-nots, with very little in between. As the industrial sector developed, however, the power of the nobility and the landowners was increasingly undermined by a growing caste of moderately wealthy former peasants.\n\nThese people would form the foundation of a middle class that would grow and mature to rival Russia's historic interest groups, and form the foundations for the rise of democracy. With industry came stable jobs, and with stable jobs came stable homes, and from that came the need for education, literacy, higher education, and intellectualism.\n\nThe middle class now forms the backbone of Russia's burgeoning political scene, and they will tenaciously defend their gains if need be."
 
   PB_Idea_Expanded_Trans_Alaskan_Pipeline:0 "Trans-American Oil Pipeline"
@@ -215,8 +223,11 @@
   PB_RUS_Icon_Climacus:0 "Blessing of the §OLADDER§!"
   PB_RUS_Icon_Michael:0 "Blessing of the §RARCHANGEL§!"
 
-  PB_RUS_Class_And_Nation_Idea:0 "Class And Nation"
   PB_Govidea_Russian_State_Capitalism:0 "Russian State Capitalism"
+  PB_RUS_Imperial_Currency:0 "Imperial Currency"
+  PB_RUS_A_National_Economy:0 "A National Economy"
+  PB_RUS_A_Free_Economy:0 "A Free Economy"
+  PB_RUS_A_Fair_Economy:0 "A Fair Economy"
 
   ##########################
   # EVENTS
@@ -1309,6 +1320,7 @@
   PB_RUS_Imperial_Corp_tt:0 "Trade relations between us and our sphere members increases by §G+25§!\n\n"
   PB_RUS_National_Protectionism_tt:0 "Sphere members will gain §G+1§! off-map civilian and military factory\n\n"
   PB_RUS_Workshop_of_the_East_tt:0 "Alliance members will gain §G+1§! off-map civilian and military factory\n\n"
+  PB_RUS_Three_Brothers_Policy_tt:0 "A number of non-Russian generals will be added to our leader pool "
   
   #######################
   # PARTIES
