--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -228,6 +228,8 @@
   PB_RUS_A_National_Economy:0 "A National Economy"
   PB_RUS_A_Free_Economy:0 "A Free Economy"
   PB_RUS_A_Fair_Economy:0 "A Fair Economy"
+  PB_RUS_Language_Reform_Underway:0 "Language Reform - Accepted"
+  PB_RUS_Language_Reform_Rejected:0 "Language Reform - Rejected"
 
   ##########################
   # EVENTS
@@ -683,7 +685,7 @@
   PB_RUS_Limited_National_Awakening:0 "A Managed National Awakening"
   PB_RUS_Russian_Bilingualism:0 "Adopt Regional Bi-Lingualism"
   PB_RUS_State_Enforced_Russian:0 "Enforce Russian Language Primacy"
-  PB_RUS_Russify_Poland:0 "Intensify Polish Russification"
+  PB_RUS_Russify_Poland:0 "Intensify Russification"
   PB_RUS_Three_Brothers_Policy:0 "Three Brothers Policy"
   PB_RUS_Civilize_Islamic_Caucasia:0 "Civilize the Muhammadans"
   PB_RUS_Promote_Greater_Armenism:0 "Co-Opt Greater Armenianism"
@@ -1321,6 +1323,8 @@
   PB_RUS_National_Protectionism_tt:0 "Sphere members will gain §G+1§! off-map civilian and military factory\n\n"
   PB_RUS_Workshop_of_the_East_tt:0 "Alliance members will gain §G+1§! off-map civilian and military factory\n\n"
   PB_RUS_Three_Brothers_Policy_tt:0 "A number of non-Russian generals will be added to our leader pool "
+  PB_RUS_Limited_National_Awakening_tt:0 "A number of Ukrainian and Polish cities and states will be renamed to their native names"
+  PB_RUS_Russian_Bilingualism_tt:0 "Some Ukrainian and Polish cities will be renamed to their native names"
   
   #######################
   # PARTIES
