Filters and other stuff

--- a/localisation/english/PB_Effects_l_english.yml
+++ b/localisation/english/PB_Effects_l_english.yml
@@ -32,3 +32,9 @@
  EFFECT_CHANGE_LAW_economic_health:0 "Change Economic Health to '$NAME|Y$' which grants ($DESC$)."
  EFFECT_CHANGE_LAW_military_modernization:0 "Change Military Modernization to '$NAME|Y$' which grants ($DESC$)."
  EFFECT_CHANGE_LAW_civilization_status:0 "Change Westernization to '$NAME|Y$' which grants ($DESC$)."
+
+# make sure that this override doesnt break something
+
+ EFFECT_ADD_ARMY_EXPERIENCE:0 "£GFX_army_experience Army Experience: $VAL|=+0$."
+ EFFECT_ADD_NAVY_EXPERIENCE:0 "£GFX_navy_experience Navy Experience: $VAL|=+0$."
+ EFFECT_ADD_AIR_EXPERIENCE:0 "£GFX_air_experience Air Experience: $VAL|=+0$."
