--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -444,6 +444,7 @@ PB_Corporate_Tax:0 "Corporation Tax"
 
 AME_EIEC_increase_EIEC_Influence_tt:0 "This will §Rincrease§! the  £GFX_pol_power  §YPolitical Influence§! of the  £GFX_EIEC  in the Government.\n\n"
 AME_EIEC_decrease_EIEC_Influence_tt:0 "This will §Gdecrease§! the  £GFX_pol_power  §YPolitical Influence§! of the  £GFX_EIEC  in the Government.\n\n"
+AME_EIEC_decrease_Big_EIEC_Influence_tt:0 "This will §G greatly decrease§! the  £GFX_pol_power  §YPolitical Influence§! of the  £GFX_EIEC  in the Government.\n\n"
 
 AME_EIEC_increase_research_speed_low_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y2%§!.\n\n"
 AME_EIEC_increase_research_speed_med_tt:0 "§GIncreases§! £GFX_EIEC   £GFX_research_icon  §YResearch speed§! by §Y4%§!.\n\n"
