Flag adjustments and Russia Naval OOB changes

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2352,22 +2352,22 @@ PRU_an_ADJ:0 "Peruvian"
  URG_cn_ADJ:0 "Cisplatine"
  URG_an_ADJ:0 "Cisplatine"
 
- ARG_ni:0 "Argentine Confederation"
- ARG_ni_DEF:0 "the Argentine Confederation"
- ARG_ds:0 "Argentine Confederation"
- ARG_ds_DEF:0 "the Argentine Confederation"
- ARG_rc:0 "Argentine Confederation"
- ARG_rc_DEF:0 "the Argentine Confederation"
- ARG_an:0 "Argentine Confederation"
- ARG_an_DEF:0 "the Argentine Confederation"
- ARG_cn:0 "Argentine Confederation"
- ARG_cn_DEF:0 "the Argentine Confederation"
- ARG_lb:0 "Argentine Confederation"
- ARG_lb_DEF:0 "the Argentine Confederation"
- ARG_ss:0 "Argentine Confederation"
- ARG_ss_DEF:0 "the Argentine Confederation"
- ARG_jc:0 "Argentine Confederation"
- ARG_jc_DEF:0 "the Argentine Confederation"
+ ARG_ni:0 "Argentine Kingdom"
+ ARG_ni_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_ds:0 "Argentine Kingdom"
+ ARG_ds_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_rc:0 "Argentine Kingdom"
+ ARG_rc_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_an:0 "Argentine Kingdom"
+ ARG_an_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_cn:0 "Argentine Kingdom"
+ ARG_cn_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_lb:0 "Argentine Kingdom"
+ ARG_lb_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_ss:0 "Argentine Kingdom"
+ ARG_ss_DEF:0 "The Kingdom of the United Argentine Provinces"
+ ARG_jc:0 "Argentine Kingdom"
+ ARG_jc_DEF:0 "The Kingdom of the United Argentine Provinces"
  ARG_ni_ADJ:0 "Rioplatense"
  ARG_rc_ADJ:0 "Rioplatense"
  ARG_lb_ADJ:0 "Rioplatense"
