--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -136,6 +136,8 @@
   PB_RUS_Russian_Twilight_desc:0 "The Russian Empire was a critical frontline in the Great War, fighting across Siberia, Korea, Manchuria and Sakhalin. Combat in the Siberian campaign was brutal, and statistics indicate that most soldiers survived barely a few hours into deployment. Japanese forces made the Empire pay for every last inch, with a fanatical resistance and ingenuity that often invalidated Russia's technological advantage. Victory only came with the Third Battle of Busan, an eight month siege that left 80,000 Russian soldiers dead.\n\nIt should come as no surprise, then, that the terms of the Treaty of Tours were a shock to the Russian people. Russia kept almost none of her wartime gains, save Sakhalin and a few minor gains across Asia. Russia earned no colonies, Korea remained de-facto independent, and the unofficial occupation of Manchuria was to end immediately.\n\nIn a single penstroke, Britain and Germany drove a knife into the back of their Russian allies, and have spent the last twenty years rubbing salt in the open wound."
   PB_RUS_Hope_For_Future:0 "The Caesarean Section of Democracy"
   PB_RUS_Hope_For_Future_desc:0 "Democracy is often a time honored institution, treasured by the people and fought for with reckless abandon.\n\nHow then, does one bring democracy to an autocracy?\n\nThe answer, of course, depends on who you ask. In Russia, the democratic experiment has been an exercise in tension. Political parties have formed, split, and disbanded in the time it takes to finish lunch. Anarchists and nationalists engage in fistfights in the streets. Anywhere you look, you can strike sparks with the right look or the right words.\n\nFor many nations, the birth of democracy is a slow, delicate process.\n\nFor Russia, thus far it has been a bloody and violent and in many cases humiliating. In the end, though, it will be worth the pain.\n\n§RAssuming that the democratic experiment succeeds, of course.§!"
+  PB_RUS_Hope_For_Future_2:0 "The Death of Russian Democracy"
+  PB_RUS_Hope_For_Future_2_desc:0 "Democracy is often a time honored institution, treasured by the people and fought for with reckless abandon.\n\nHow then, does one bring democracy to an autocracy?\n\nThe answer, of course, depends on who you ask. In Russia, the democratic experiment has been an exercise in tension. Political parties have formed, split, and disbanded in the time it takes to finish lunch. Anarchists and nationalists engage in fistfights in the streets. Anywhere you look, you can strike sparks with the right look or the right words.\n\nFor many nations, the birth of democracy is a slow, delicate process.\n\nFor Russia, thus far it has been a bloody and violent and in many cases humiliating. In the end, though, it will be worth the pain.\n\n§RAssuming that the democratic experiment succeeds, of course.§!"
   PB_RUS_Middle_Class_Rising:0 "Rise of the Russian Middle Class"
   PB_RUS_Middle_Class_Rising_desc:0 "One of the biggest demograghic shifts of the Second Renaissance was the birth of the Russian middle class. For most of its' history, Russia was a country of haves and have-nots, with very little in between. As the industrial sector developed, however, the power of the nobility and the landowners was increasingly undermined by a growing caste of moderately wealthy former peasants.\n\nThese people would form the foundation of a middle class that would grow and mature to rival Russia's historic interest groups, and form the foundations for the rise of democracy. With industry came stable jobs, and with stable jobs came stable homes, and from that came the need for education, literacy, higher education, and intellectualism.\n\nThe middle class now forms the backbone of Russia's burgeoning political scene, and they will tenaciously defend their gains if need be."
 
@@ -230,6 +232,8 @@
   PB_RUS_A_Fair_Economy:0 "A Fair Economy"
   PB_RUS_Language_Reform_Underway:0 "Language Reform - Accepted"
   PB_RUS_Language_Reform_Rejected:0 "Language Reform - Rejected"
+
+  PB_RUS_Jewish_Flight:0 "Jewish Flight"
 
   ##########################
   # EVENTS
@@ -1314,7 +1318,7 @@
   PB_RUS_Unify_the_Russian_Noosphere_tt:0 "Unlocks the ability to §Greaccept§! all §Ylost accepted§! cultures if their resistance movements have been weakened to §Ybelow 25% strength§!"
   PB_RUS_Sanctify_the_Khylsts_tt:0 "The §YPopularity of Rasputin's Cult§! will be converted into a lump sum of §Gstability and political power!§!"
 
-  PB_RUS_Intensify_Russification_tt:0 "Increase the Culture Convert Rate to §Y+12%.§!\n\nCulture Conversion will be §RDisabled§!"
+  PB_RUS_Intensify_Russification_tt:0 "Increase the Culture Convert Rate to §Y+12%.§!"
 
   PB_RUS_Prepare_Special_Forces_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Prepare_Special_Forces_times_taken_var]§!/§Y3§!.\n"
   PB_RUS_Gain_Cult_Intel_tt:0 "You must complete this £decision_icon_small §Ydecision§! §G3§! times for preperations relating to Operatsiya Polunoch. Currently, you have completed this decision §Y[?PB_RUS_Gain_Cult_Intel_times_taken_var]§!/§Y3§!.\n"
@@ -1340,7 +1344,13 @@
   PB_RUS_Three_Brothers_Policy_tt:0 "A number of non-Russian generals will be added to our leader pool "
   PB_RUS_Limited_National_Awakening_tt:0 "A number of Ukrainian and Polish cities and states will be renamed to their native names"
   PB_RUS_Russian_Bilingualism_tt:0 "Some Ukrainian and Polish cities will be renamed to their native names"
-  
+  PB_RUS_Denikin_In_Control_tt:0 "\nThe Baltic Governate will gain a new leader if Denikin is their current ruler"
+  suspected_moscow_circle_1:0 "Suspected Moscow Circle Acolyte"
+  suspected_moscow_circle_tt:0 "\nReplace §YSuspected Moscow Circle Acolyte§! with §YMoscow Circle Acolyte§!\nEffective change:\n  - Army Reassignment duration: §G-30.0%§!\n  - Leader Skill Bonuses: §G+15.0%§!"
+  PB_Moscow_Circle_Ascendancy:0 "Moscow Circle Presence - Limited"
+  PB_Moscow_Circle_Ascendancy_2:0 "Moscow Circle Presence - Growing"
+  PB_Moscow_Circle_Ascendancy_3:0 "Moscow Circle Presence - Complete Dominance"
+
   #######################
   # PARTIES
   #######################
