--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  
  ni:0 "Neo Imperialists"
- ni_noun:0 "New Imperialists"
+ ni_noun:0 "Neo Imperialists"
  ni_desc:0 "Ultranationalist State"
  NI_VARIANT_01:0 "§ONew Imperialists§!"
  NI_VARIANT_01_desc:0 "§ONeo-Imperialism§! is less of a unified ideology and more a set of similar principles shared by different groups. While 19th Century Imperialism was born out of the mission to civilize and a need for resources, New Imperialism was born out of the cultural chaos of the Great War's aftermath.\n\nUnlike a conventional dictatorial system, Neo-Imperialism advocates for the grand expansion of the state to dominate their neighbors both culturally, economically and politically. The concept of cultural dominance is particularly prevalent, as Neo-Imperialists believe in the inherent superiority of their home culture, and often see other cultures as inferior. This often extends to the topic of race, with Neo-Imperialists advocating for obliteration of so-called savage cultures and identities. Though there are naturally variances, Neo-Imperialists are almost invariably violent expansionists with aims on their neighbors and the world at large."
