More Russia stoof

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -7,6 +7,12 @@
   PB_RUS_Imperial_Tula_Arms_Plant:0 "Tula Arms Plant"
   PB_RUS_Degtyaryov_Plant:0 "Degtyaryov Plant"
 
+  ##########################
+  #TECH 
+  ##########################
+  black_hundred:0 "Black Hundredists"
+  tech_black_hundred:0 "Black Hundredist Security"
+
 
   ##########################
   #OPINION MODIFIERS
@@ -767,8 +773,8 @@
   PB_RUS_Redemption_Brigades_desc:0 "Ever since the Moscow Circle seized power, countless numbers of people have been sent to the various gulags across Siberia and Alaska. These prisoners, as to be expected, want to be freed from the prison camps. Marshal Kornilov has come up with an idea to free these people - in a sense - but at the same time, use them for Russia’s benefit. He has proposed the creation of “redemption brigades,” disposable penal battalions filled with convicts. Such brigades would be sent to the most dangerous parts of the front while being underequipped at the same time. These convicts would be cleansed in blood, redeeming them in the eyes of their nation. Any convict that survived a term of service in a redemption brigade would have their sentence commuted and be freed."
   PB_RUS_Russian_Renaissance:0 "Russian Cultural Renaissance"
   PB_RUS_Russian_Renaissance_desc:0 "With the old government having been replaced by true Russian patriots, the Moscow Circle government has begun putting in time and effort to revitalize Russian culture to foster a single Russian identity. Under the Circle’s gaze, Russian culture shall flourish and anti-Russian ideas such as “multi-culturalism” shall be erased, for there is only one Russian nation and one Russian people."
-  PB_RUS_Mobilize_Youth:0 "Deputize the Hundredist Youth Corps"
-  PB_RUS_Mobilize_Youth_desc:0 "The Blackhundredists have long had a youth corp as a part of their movement. These children were raised in the Blackhundredist ideology and trained how to fight from a young age. With the Black Hundreds being integrated into the new government, the Moscow Circle has opted to subsume the Hundredist Youth Corp and use it as the backbone for a government youth corp."
+  PB_RUS_Mobilize_Youth:0 "Deputize the Hundredist Corps"
+  PB_RUS_Mobilize_Youth_desc:0 "The Blackhundredists have long had a militia corp as a part of their movement. These men were raised in the Blackhundredist ideology and trained how to fight from a young age. With the Black Hundreds being integrated into the new government, the Moscow Circle has opted to subsume the Hundredist Militia Corp and use it as the backbone for a government security organization."
   PB_RUS_Bannerkeeper_of_Slavs:0 "Bannerkeeper of the Slavs"
   PB_RUS_Bannerkeeper_of_Slavs_desc:0 "Russia has long seen itself as the guardian of all the Slavic peoples and has long believed that it was their destiny to unite the Slavs under their banner. The new government has taken the Pan-Slavic idea and declared its intent to unite the Slavs under the Greater Russian Empire, a total centralization of Russia’s control over its eastern and American holdings, stripping them of their autonomy and making them a part of Russia proper."
   PB_RUS_Guide_the_Chinese:0 "A Natural Border in the East"
@@ -1350,6 +1356,7 @@
   PB_Moscow_Circle_Ascendancy:0 "Moscow Circle Presence - Limited"
   PB_Moscow_Circle_Ascendancy_2:0 "Moscow Circle Presence - Growing"
   PB_Moscow_Circle_Ascendancy_3:0 "Moscow Circle Presence - Complete Dominance"
+  PB_RUS_Mobilize_Youth_tt:0 "\nThe §YBlack Hundredists§! support Company offers double the suppression when compared to the §YMilitary Police§! support company and also requires less equipment.\n\nCreate §HBlack Hundredist Secruity Battalion§! division template:\n§YCombat§!\n - Light Infantry\n - Light Infantry\n - Light Infantry\n§YSupport§!\n - Black Hundredists Support Company "
 
   #######################
   # PARTIES
