--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -1342,14 +1342,17 @@
   RUS_trade_tt:0 "§YTrade Relations§! between Russia-Alaska and the following North American nations will increase by §G+25§!"
   PB_RUS_Sib_Infra_tt:0 "Sets the minimum level of §Yinfrastructure§! for states to §Y2§! and adds an additional building slot to these states\n\n"
   RUS_Brunhild:0 "Brunhild"
+
   PB_RUS_Industrial_Stasis_tt:0 "Every core state that has less than two §YCivilian Factories§! will suffer from the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! state modifier.\n\n"
   PB_RUS_Industrial_Stasis_2_tt:0 "\nTo remove the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! modifier have two §YCivilian Factories§! in the affected state."
   PB_RUS_Imperial_Corp_tt:0 "Trade relations between us and our sphere members increases by §G+25§!\n\n"
   PB_RUS_National_Protectionism_tt:0 "Sphere members will gain §G+1§! off-map civilian and military factory\n\n"
   PB_RUS_Workshop_of_the_East_tt:0 "Alliance members will gain §G+1§! off-map civilian and military factory\n\n"
+
   PB_RUS_Three_Brothers_Policy_tt:0 "A number of non-Russian generals will be added to our leader pool "
   PB_RUS_Limited_National_Awakening_tt:0 "A number of Ukrainian and Polish cities and states will be renamed to their native names"
   PB_RUS_Russian_Bilingualism_tt:0 "Some Ukrainian and Polish cities will be renamed to their native names"
+
   PB_RUS_Denikin_In_Control_tt:0 "\nThe Baltic Governate will gain a new leader if Denikin is their current ruler"
   suspected_moscow_circle_1:0 "Suspected Moscow Circle Acolyte"
   suspected_moscow_circle_tt:0 "\nReplace §YSuspected Moscow Circle Acolyte§! with §YMoscow Circle Acolyte§!\nEffective change:\n  - Army Reassignment duration: §G-30.0%§!\n  - Leader Skill Bonuses: §G+15.0%§!"
@@ -1357,7 +1360,8 @@
   PB_Moscow_Circle_Ascendancy_2:0 "Moscow Circle Presence - Growing"
   PB_Moscow_Circle_Ascendancy_3:0 "Moscow Circle Presence - Complete Dominance"
   PB_RUS_Mobilize_Youth_tt:0 "\nThe §YBlack Hundredists§! support Company offers double the suppression when compared to the §YMilitary Police§! support company and also requires less equipment.\n\nCreate §HBlack Hundredist Secruity Battalion§! division template:\n§YCombat§!\n - Light Infantry\n - Light Infantry\n - Light Infantry\n§YSupport§!\n - Black Hundredists Support Company "
-
+  PB_RUS_Russian_Renaissance_tt:0 "§YGreater Russian (Gr. Russian)§! becomes the §Gmain culture§! of [ROOT.GetNameDef]\n\n"
+  
   #######################
   # PARTIES
   #######################
