Russia Military Tree + Prussia fixes

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -8,10 +8,12 @@
   PB_RUS_Degtyaryov_Plant:0 "Degtyaryov Plant"
 
   ##########################
-  #TECH 
+  #TECH/SUPPORT COMPANIES
   ##########################
   black_hundred:0 "Black Hundredists"
   tech_black_hundred:0 "Black Hundredist Security"
+  winter_logistics_support:0 "Winter Logistics Company"
+  winter_logistics_support_tech:0 "Winter Logistics Tech"
 
 
   ##########################
@@ -1367,11 +1369,16 @@
   PB_RUS_Russian_Renaissance_tt:0 "§YGreater Russian (Gr. Russian)§! becomes the §Gmain culture§! of [ROOT.GetNameDef]\n\n"
   
   PB_RUS_Spector_Of_The_East_tt:0 "\nLevel three coastal forts will be built in every coastal province in §YVladivostok§! and §YAmur§!\n\nThe §RJapanese§! AI is less likely to naval invade Russia\n\n"
-  PB_RUS_Sib_Vet_tt:0 "Every §HUnit Leader§! with the §bSiberian Veteran§! £GFX_trait_Siberian_Front_Veteran  trait will gain the following:"
+  PB_RUS_Sib_Vet_tt:0 "Every §HUnit Leader§! with the §bSiberian Veteran§! £GFX_sib_front_ti  trait will gain the following:"
   PB_RUS_Hades_Legion_tt:0 "\nA §HFake Intel§! army (§Y30 Divisions§!) will be raised in the capital state. The templates of these divisions be be selected at §Yrandom§! from §HRussia's§! current template pool."
+  PB_RUS_Attritional_Destruction_Def_tt:0 "Every §HUnit Leader§! with a §YDefense§! skill of < §Y2§!:"
+  PB_RUS_Operational_Encirclement_Att_tt:0 "Every §HUnit Leader§! with a §YAttack§! skill of < §Y2§!:"
+
+  PB_RUS_Attritional_Destruction_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nEntrenchment speed: §G+10.0%§! \nMax Entrenchment: §G+5.0§! \n\n"
+  PB_RUS_Operational_Encirclement_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nDivision speed: §G+5.0%§! \nTerrain Penalty Reduction: §G+10.0%§! \n\n"
 
   #######################
-  # PARTIES
+  # S
   #######################
 
   #######################
@@ -1379,6 +1386,7 @@
   #######################
   RUS_Industrial_Stasis:0 "Industrial Stasis"
   RUS_Industrial_Stasis_desc:0 "§YTo remove this modifier have two §YCivilian Factories in this state.§!"
+  RUS_Russian_Army:0 "Lessons Of The Siberian Campaign"
 
   #######################
   # COSMETIC TAGS
