--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -144,6 +144,11 @@
   PB_RUS_Russian_Twilight_desc:0 "The Russian Empire was a critical frontline in the Great War, fighting across Siberia, Korea, Manchuria and Sakhalin. Combat in the Siberian campaign was brutal, and statistics indicate that most soldiers survived barely a few hours into deployment. Japanese forces made the Empire pay for every last inch, with a fanatical resistance and ingenuity that often invalidated Russia's technological advantage. Victory only came with the Third Battle of Busan, an eight month siege that left 80,000 Russian soldiers dead.\n\nIt should come as no surprise, then, that the terms of the Treaty of Tours were a shock to the Russian people. Russia kept almost none of her wartime gains, save Sakhalin and a few minor gains across Asia. Russia earned no colonies, Korea remained de-facto independent, and the unofficial occupation of Manchuria was to end immediately.\n\nIn a single penstroke, Britain and Germany drove a knife into the back of their Russian allies, and have spent the last twenty years rubbing salt in the open wound."
   PB_RUS_Russian_Twilight_2:0 "Butchered Victory"
   PB_RUS_Russian_Twilight_2_desc:0 "The Russian Empire was a critical frontline in the Great War, fighting across Siberia, Korea, Manchuria and Sakhalin. Combat in the Siberian campaign was brutal, and statistics indicate that most soldiers survived barely a few hours into deployment. Japanese forces made the Empire pay for every last inch, with a fanatical resistance and ingenuity that often invalidated Russia's technological advantage. Victory only came with the Third Battle of Busan, an eight month siege that left 80,000 Russian soldiers dead.\n\nIt should come as no surprise, then, that the terms of the Treaty of Tours were a shock to the Russian people. Russia kept almost none of her wartime gains, save Sakhalin and a few minor gains across Asia. Russia earned no colonies, Korea remained de-facto independent, and the unofficial occupation of Manchuria was to end immediately.\n\nIn a single penstroke, Britain and Germany drove a knife into the back of their Russian allies, and have spent the last twenty years rubbing salt in the open wound."
+  PB_RUS_Russian_Twilight_desc:0 "The Russian Empire was a critical frontline in the Great War, fighting across Siberia, Korea, Manchuria and Sakhalin. Combat in the Siberian campaign was brutal, and statistics indicate that most soldiers survived barely a few hours into deployment. Japanese forces made the Empire pay for every last inch, with a fanatical resistance and ingenuity that often invalidated Russia's technological advantage. Victory only came with the Third Battle of Busan, an eight month siege that left 80,000 Russian soldiers dead.\n\nIt should come as no surprise, then, that the terms of the Treaty of Tours were a shock to the Russian people. Russia kept almost none of her wartime gains, save Sakhalin and a few minor gains across Asia. Russia earned no colonies, Korea remained de-facto independent, and the unofficial occupation of Manchuria was to end immediately.\n\nIn a single penstroke, Britain and Germany drove a knife into the back of their Russian allies, and have spent the last twenty years rubbing salt in the open wound."
+  PB_RUS_Russian_Twilight_3:0 "Butchered Victory"
+  PB_RUS_Russian_Twilight_3_desc:0 "The Russian Empire was a critical frontline in the Great War, fighting across Siberia, Korea, Manchuria and Sakhalin. Combat in the Siberian campaign was brutal, and statistics indicate that most soldiers survived barely a few hours into deployment. Japanese forces made the Empire pay for every last inch, with a fanatical resistance and ingenuity that often invalidated Russia's technological advantage. Victory only came with the Third Battle of Busan, an eight month siege that left 80,000 Russian soldiers dead.\n\nIt should come as no surprise, then, that the terms of the Treaty of Tours were a shock to the Russian people. Russia kept almost none of her wartime gains, save Sakhalin and a few minor gains across Asia. Russia earned no colonies, Korea remained de-facto independent, and the unofficial occupation of Manchuria was to end immediately.\n\nIn a single penstroke, Britain and Germany drove a knife into the back of their Russian allies, and have spent the last twenty years rubbing salt in the open wound."
+  PB_RUS_Russian_Twilight_4:0 "Butchered Victory"
+  PB_RUS_Russian_Twilight_4_desc:0 "The Russian Empire was a critical frontline in the Great War, fighting across Siberia, Korea, Manchuria and Sakhalin. Combat in the Siberian campaign was brutal, and statistics indicate that most soldiers survived barely a few hours into deployment. Japanese forces made the Empire pay for every last inch, with a fanatical resistance and ingenuity that often invalidated Russia's technological advantage. Victory only came with the Third Battle of Busan, an eight month siege that left 80,000 Russian soldiers dead.\n\nIt should come as no surprise, then, that the terms of the Treaty of Tours were a shock to the Russian people. Russia kept almost none of her wartime gains, save Sakhalin and a few minor gains across Asia. Russia earned no colonies, Korea remained de-facto independent, and the unofficial occupation of Manchuria was to end immediately.\n\nIn a single penstroke, Britain and Germany drove a knife into the back of their Russian allies, and have spent the last twenty years rubbing salt in the open wound."
   PB_RUS_Hope_For_Future:0 "The Caesarean Section of Democracy"
   PB_RUS_Hope_For_Future_desc:0 "Democracy is often a time honored institution, treasured by the people and fought for with reckless abandon.\n\nHow then, does one bring democracy to an autocracy?\n\nThe answer, of course, depends on who you ask. In Russia, the democratic experiment has been an exercise in tension. Political parties have formed, split, and disbanded in the time it takes to finish lunch. Anarchists and nationalists engage in fistfights in the streets. Anywhere you look, you can strike sparks with the right look or the right words.\n\nFor many nations, the birth of democracy is a slow, delicate process.\n\nFor Russia, thus far it has been a bloody and violent and in many cases humiliating. In the end, though, it will be worth the pain.\n\n§RAssuming that the democratic experiment succeeds, of course.§!"
   PB_RUS_Hope_For_Future_2:0 "The Death of Russian Democracy"
@@ -1348,6 +1353,8 @@
   RUS_trade_tt:0 "§YTrade Relations§! between Russia-Alaska and the following North American nations will increase by §G+25§!"
   PB_RUS_Sib_Infra_tt:0 "Sets the minimum level of §Yinfrastructure§! for states to §Y2§! and adds an additional building slot to these states\n\n"
   RUS_Brunhild:0 "Brunhild"
+  RUS_Mos:0 "Moscow"
+  RUS_Tsar_Gun:0 "Tsar Gun"
 
   PB_RUS_Industrial_Stasis_tt:0 "Every core state that has less than two §YCivilian Factories§! will suffer from the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! state modifier.\n\n"
   PB_RUS_Industrial_Stasis_2_tt:0 "\nTo remove the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! modifier have two §YCivilian Factories§! in the affected state."
@@ -1373,13 +1380,25 @@
   PB_RUS_Hades_Legion_tt:0 "\nA §HFake Intel§! army (§Y30 Divisions§!) will be raised in the capital state. The templates of these divisions be be selected at §Yrandom§! from §HRussia's§! current template pool."
   PB_RUS_Attritional_Destruction_Def_tt:0 "Every §HUnit Leader§! with a §YDefense§! skill of < §Y2§!:"
   PB_RUS_Operational_Encirclement_Att_tt:0 "Every §HUnit Leader§! with a §YAttack§! skill of < §Y2§!:"
+  PB_RUS_Western_forts_tt:0 "A series of §Hforts§! will be built along the German border"
+  PB_RUS_Defensive_Intimidation_tt:0 "Unlocks an improved version of the §YStatic Warfare§! army spirit:\n\n"
+  RUS_cheaper_last_stand:0 "§G-25%§! cost for §YLast Stand§!"
+  RUS_last_stand:0 "Last Stand"
+  PB_RUS_Revert_Naval_Neglect_tt:0 "You can now assign §GNaval Spirits§! in the §YOfficer Corps§! tab"
+  PB_RUS_Continue_The_Air_Plan_tt:0 "You can now assign §GAir Spirits§! in the §YOfficer Corps§! tab"
+  PB_RUS_Revert_Naval_Neglect_BB_tt:0 "Creates two production lines of the §HTsar Class§! heavy battleship with each production line starting at §G80%§! completion "
+  PB_RUS_Airbase_Expansion_tt:0 "Every state that has at least one §YAirfield§! at level §Ythree§! or less will receive an §Gadditional airfield§!"
 
   PB_RUS_Attritional_Destruction_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nEntrenchment speed: §G+10.0%§! \nMax Entrenchment: §G+5.0§! \n\n"
   PB_RUS_Operational_Encirclement_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nDivision speed: §G+5.0%§! \nTerrain Penalty Reduction: §G+10.0%§! \n\n"
+  PB_RUS_The_Trenchfront_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nDivision Defense on core territory: §G+15.0%§!\n\n"
+  PB_RUS_Mass_Bombardment_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nArtillery Attack factor: §G+10.0%§!"
+  
 
   #######################
-  # S
+  # ARMY SPIRITS
   #######################
+  static_warfare_spirit_Russia:0 "Static Warfare"
 
   #######################
   # DYNAMIC MODIFIERS
