--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -133,6 +133,11 @@
   RUS_PB_Grigori_Rasputin_2:0 "Grigori Rasputin"
   PB_RUS_Rasputin_1:0 "Russia's Greatest Love Machine"
   PB_RUS_Rasputin_2:0 "Embodiment of Christ"
+
+  PB_RUS_Imperatritsa_Rossiya:0 "Imperatritsa Rossiya"
+  PB_RUS_Imperatritsa_Rossiya_2:0 "Imperatritsa Rossiya"
+
+  fanatic_resolve:0 "Fanatic Resolve"
   
   ##########################
   # IDEAS
@@ -1325,7 +1330,7 @@
 
   PB_RUS_Deport_Eastern_Germans_tt:0 "\n§RReduce§! the population of §Y[239.GetName]§! by §Y25%.§!"
 
-  PB_RUS_Unlock_Battle_Priest_Support:0 "Unlocks the §YBattle Priests§! unique support unit."
+  PB_RUS_Unlock_Battle_Priest_Support:0 "Unlocks the §YBattle Priests§! unique support unit.\n\n§YBattle Priests§! reduce manpower loss more effectively than §YField Hospitals§! and also reduce the loss of war support inflicted by casulities"
 
   PB_RUS_One_GodTwo_Paths_tt:0 "Unlocks the ability to §Gaccept§! all §YMuslim§! cultures."
   PB_RUS_The_Lord_Awaits_Above_tt:0 "Gain 300 £research_points_small §CResearch Points§!"
@@ -1352,9 +1357,9 @@
   PB_RUS_Kiev_Max_Infra:0 "Add §Ymaximum§! infrastructure to §YKiev§!"
   RUS_trade_tt:0 "§YTrade Relations§! between Russia-Alaska and the following North American nations will increase by §G+25§!"
   PB_RUS_Sib_Infra_tt:0 "Sets the minimum level of §Yinfrastructure§! for states to §Y2§! and adds an additional building slot to these states\n\n"
-  RUS_Brunhild:0 "Brunhild"
-  RUS_Mos:0 "Moscow"
-  RUS_Tsar_Gun:0 "Tsar Gun"
+  RUS_Brunhild:0 "Brunhild Class Battery"
+  RUS_Mos:0 "Moscow Class Battery"
+  RUS_Tsar_Gun:0 "Tsar Class Battery"
 
   PB_RUS_Industrial_Stasis_tt:0 "Every core state that has less than two §YCivilian Factories§! will suffer from the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! state modifier.\n\n"
   PB_RUS_Industrial_Stasis_2_tt:0 "\nTo remove the £GFX_dismantle_military_industry_text_icon  §RIndustrial Stasis§! modifier have two §YCivilian Factories§! in the affected state."
@@ -1398,7 +1403,10 @@
   PB_RUS_The_Trenchfront_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nDivision Defense on core territory: §G+15.0%§!\n\n"
   PB_RUS_Mass_Bombardment_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nArtillery Attack factor: §G+10.0%§!"
   PB_RUS_Pincer_Maneuver_Tactics_tt:0 "Modify §Y$RUS_Russian_Army$§! by \nArmour Division Attack: §G+8.0%§!\n\n"
-  
+
+  PB_RUS_Old_Believers_Building_Slots_tt:0 "States that are majority §YRussian§! population that are in Siberia will gain §G+1§! additional building slots(§gThis does not include states in the far east§!):\n"
+  PB_RUS_Canonize_Michael_ll_tt:0 "Michael's love of Equastrian sports will motivate a new generation of cavalry officers"
+  PB_RUS_Unify_the_Chruch_and_State_tt:0 "Adds the following unique §YGoverment Type§!:\n"
 
   #######################
   # ARMY SPIRITS
